fix spacing

--- a/_sass/overrides.scss
+++ b/_sass/overrides.scss
@@ -139,3 +139,7 @@ code {
 .page-content ul > li::before {
 	color: #ff7f00;
 }
+
+ul p {
+	margin-bottom: 0px;
+}
